# dotman

./: CMakeLists.txt  README.md
Projects/dotman/: CMakeLists.txt
Projects/dotman/src/: App.cpp  App.hpp  main.cpp
Projects/dotman/src/cli/: ArgumentParser.cpp  ArgumentParser.hpp
Projects/dotman/src/core/: Dotfile.hpp  DotfileManager.cpp  DotfileManager.hpp
src/: App.cpp
src/cli/: ArgumentParser.cpp  ArgumentParser.hpp
src/core/: Dotfile.cpp  DotfileManager.cpp  DotfileManager.hpp
src/fs/: FileSystem.cpp  FileSystem.hpp
tests/: TestUtils.hpp  test_install.cpp
